...
            await loadAlbums()
        }
    }

    private var welcome: some View {
        VStack {
            Text("Welcome to Big Immich!").scaleEffect(2)

            Text("It looks like you haven't configured this app yet.")
                .padding(.top, 50)
            Text(
                "In order to do that, go to the Settings page and fill in Immich credentials."
            ).padding(.top, 5)
...
