...
                        if let configurationError {
                            Text(configurationError).foregroundColor(
                                configurationErrorColour
                            )
                        } else if connectionTested {
                            if connectionWorking {
                                Text("Connection to Immich works!")
                                    .foregroundColor(.green)
                            } else {
                                Text("Couldn't connect to Immich :(")
                                    .foregroundColor(.red)
                            }
                        }
...
